--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,88 @@
-.App {
-  text-align: center;
-}
+body
+{
+  background: #fd746c;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #ff9068, #fd746c);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #ff9068, #fd746c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+/* overflow: hidden; */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.App
+{
+  width: 600px;
+  margin :100px auto;
+  border: 1px solid black;
   color: white;
+  background-color: rgb(44,44,44);
+  border-radius: 3px;
+  padding-bottom: 10px; 
 }
-
-.App-link {
-  color: #61dafb;
+input
+{
+  background: transparent;
+  border: none;
+  padding: 20px;
+  color: white;
+  margin: 20px;
+  width: 300px;
+  height: 40px;
+  font-size: larger;
+  letter-spacing: 1px;
 }
+input::placeholder{
+  color:white;
+}
+input:focus, button:focus{
+  outline: none;
+}
+button{
+  background-color: rgb(74,75,74);
+  color:white;
+  background-color: #e94b3cff;
+  border: none;
+  padding: 20px ;
+  font-size: large;
+  cursor: pointer;
+  border-radius: 6px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+button:hover{
+  opacity: 0.9;
+
+}
+.form-div{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.taskList
+{
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+}
+.item 
+{
+  position: relative;
+  margin: 15px 60px;
+  font-family: sans-serif;
+  letter-spacing: 1px;
+  padding: 5px;
+  background-color: #fd746c;
+  border-radius: 6px;
+
+}
+.item p {
+  margin-left: 20px;
+}
+.item p span
+{
+  margin-right: 20px;
+  position: absolute;
+  right: 0;
+  cursor: pointer;
+  font-size: larger;
+}
+.item input{
+  padding:0;
+  height: auto;
 }
